--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <body>
     
-    <h1>My First Heading</h1>
+    <h1>Cloon Troopers Are Cool</h1>
     
-    <p>My First paragraph</p>
+    <p>Captain Rex Is The Best</p>
+    <img src="trooper.jpg">
   </body>
 </html>
